--- a/style.css
+++ b/style.css
@@ -510,9 +510,9 @@ article pre {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin-top: 0.2em;
-  margin-bottom: -0.1em;
-  margin-left: 0;
+  margin-top: 0.5em;
+  margin-bottom: 0.1em;
+  margin-left: 0.4em;
 }
 
 .remember-label {
@@ -581,4 +581,34 @@ article pre {
   width: 100%;
   padding-right: 2.5em;
   box-sizing: border-box;
+}
+
+.password-row #toggle-password {
+  position: absolute;
+  top: 45%;
+  right: 0.8em;
+  transform: translateY(-50%);
+  width: 2.2em;
+  height: 2.1em;
+  padding: 0;
+  border-radius: 50%;
+  border: none;
+  background: transparent;
+  color: var(--primary);
+  font-size: 0.8em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background var(--transition), transform var(--transition);
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+
+.password-row #toggle-password:hover {
+  background: transparent;
+  color: var(--primary-dark);
+  transform: translateY(-50%) scale(1.05);
+  background-color: transparent !important;
+  box-shadow: none !important;
 }
